--- a/KursovayaNew/KursovayaNew.csproj
+++ b/KursovayaNew/KursovayaNew.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="BlazorInputFile" Version="0.2.0" />
+    <PackageReference Include="NPOI" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
